--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>CSS - Coworking Space</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="">
 
@@ -20,13 +20,78 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,600;1,600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+  <div class="container">
+    <header class="header">
+      <a href="" class="logo">
+        <img src="img/Logo_Cozy Corner.png" alt="Logotipo Coworking Workspace">
+      </a>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+      <nav class="navPrincipal">
+        <ul>
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Featured</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">More</a></li>
+        </ul>
+      </nav>
+
+      <aside class="login">
+        <ul>
+          <li><a href=""> <img src="img/search.svg" alt="Buscar"></a></li>
+          <li><a class="link" href=""> Sign In</a></li>
+          <li><a class="button" href=""> Sign Up</a></li>
+        </ul>
+      </aside>
+    </header>
+
+    <section class="hero">
+      <div class="hero__content">
+        <div class="hero__header">
+          <h1>Find your comfort working zone with Cozy Corner</h1>
+          <p>Change your work environment by using a co-working place, to meet new people and gain a new network</p>  
+        </div>
+        <div class="hero__list">
+          <ul>
+            <li>Virtual Office Setup</li>
+            <li>Open Workspace</li>
+            <li>Space for Event</li>
+            <li>Chill Out Zone</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="coworking-info">
+      <article>
+        <img src="img/Location.svg" alt="">
+        <h3>20+ Location</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+
+      <article>
+        <img src="img/Room.svg" alt="">
+        <h3>324 Rooms Available</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+
+      <article>
+        <img src="img/wifi.svg" alt="">
+        <h3>100% Internet Connected</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+    </section>
+
+
+  </div>
+
 
 </body>
 
